# SuperTux-Advance-Replica

./: .gitignore  .gitmodules  0-0.ason  0-1.ason  0-2.ason  CMakeLists.txt  README.md  autotile.ason  build.py  empty_level.ason  game_start_level.ason  generated.h  generated_base_classes.h  inheritence_map.json  loaded_assets.json  main.cpp  overworld.ason  settings.json  shader_test.ason  structured_classes.json  test_level.ason  toolchain.cmake  ufo_header_tool_log.txt  undo_redo_test.ason
res/: test.ason  tiled_resources.tiled-session
res/gfx/: platformer_level.json
res/inverted_colours/: fragment.glsl  vertex.glsl
res/map/: 0-0.json  aurora-iceguy.json  aurora-learn_converted_from_tiled.ason  aurora-pennyton_converted_from_tiled.ason  aurora-subsea_converted_from_tiled.ason  aurora-wind_converted_from_tiled.ason  u-ice.json  (+1 more)
src/: check_point.ason  check_point.ufo.h  coin.ason  coin.ufo.h  dead_tux.ason  dead_tux.ufo.h  fire_ball.ason  fire_ball.cpp  fire_ball.ufo.h  fire_flower.ason  fire_flower.ufo.h  flame_effect.ason  flame_effect.ufo.h  game_start.ufo.h  ice_ball.ason  ice_ball.cpp  ice_ball.ufo.h  ice_cap.ason  ice_cap.ufo.h  ice_crusher.ason  ice_crusher.ufo.h  ice_flower.ason  ice_flower.ufo.h  item_box.ason  item_box.ufo.h  key.ason  key.cpp  key.ufo.h  level_goal_trigger.ufo.h  level_transition_trigger.ufo.h  main_menu.ason  main_menu.ufo.h  middle_man.ufo.h  pause_menu.ason  pause_menu.ufo.h  platformer_rectangle_collision.ufo.h  player_overworld.ason  player_overworld.ufo.h  power_up_effect.ason  power_up_effect.ufo.h  (+10 more)
test/: just_a_sprite.ason
(+2 files in other folders)
